--- a/langs/lang.en.json
+++ b/langs/lang.en.json
@@ -99,7 +99,7 @@
         "specialTitles": {
             "developer": "plug&#179; Developer",
             "sponsor": "plug&#179; Sponsor",
-            "vip": "plug&#179; VIP",
+            "vip": "plug&#179; Ambassador",
             "donator": "plug&#179; Donator"
         },
         "id": "ID",
