Added support for inline images

--- a/langs/lang.en.json
+++ b/langs/lang.en.json
@@ -150,7 +150,8 @@
         "autorespond": "AFK Autorespond",
         "notify": "Notifications",
         "afktimers": "AFK Timers",
-        "roomsettings": "Room Settings"
+        "roomsettings": "Room Settings",
+        "inlineimages": "Inline Images"
     },
     "status": {
         "available": "Available",
