--- a/src/alpha/langs/lang.en.json
+++ b/src/alpha/langs/lang.en.json
@@ -171,7 +171,7 @@
     "vote": {
         "meh": "Meh",
         "woot": "Woot",
-        "curate": "Grab",
+        "grab": "Grab",
         "undecided": "Undecided",
         "djing": "DJing"
     },
